--- a/app/src/main/res/layout/fragment_other_bet_record_detail.xml
+++ b/app/src/main/res/layout/fragment_other_bet_record_detail.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/layout_total"
+        app:layout_constraintBottom_toTopOf="@+id/layoutTotal"
         app:layout_constraintTop_toBottomOf="@+id/tvUsTime">
 
         <LinearLayout
