转换记录显示优化

--- a/app/src/main/res/layout/item_money_transfer_history.xml
+++ b/app/src/main/res/layout/item_money_transfer_history.xml
@@ -67,7 +67,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:maxLines="2"
-                    app:platName="@{row.firmTypeOut}"
+                    app:platName="@{row.firmNameOut}"
                     android:textColor="@color/color_BBBBBB_333333"
                     android:textSize="@dimen/textSize12sp"
                     app:autoSizeMaxTextSize="@dimen/textSize12sp"
@@ -88,7 +88,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:maxLines="2"
-                    app:platName="@{row.firmTypeIn}"
+                    app:platName="@{row.firmNameIn}"
                     android:textColor="@color/color_BBBBBB_333333"
                     android:textSize="@dimen/textSize12sp"
                     app:autoSizeMaxTextSize="@dimen/textSize12sp"
