首页首充活动提交

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -696,5 +696,7 @@
     <color name="color_EFF0F2">#EFF0F2</color>
     <color name="color_DADDE3">#DADDE3</color>
     <color name="color_F5F5F7">#F5F5F7</color>
+    <color name="color_80DDFF">#80DDFF</color>
+    <color name="color_F8FBFF">#F8FBFF</color>
 
 </resources>
