--- a/app/src/main/res/layout/view_first_deposit.xml
+++ b/app/src/main/res/layout/view_first_deposit.xml
@@ -5,39 +5,48 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/color_FFFFFF">
-    
-    
-    <LinearLayout
+    android:background="@color/white">
+
+    <FrameLayout
         android:id="@+id/linNoChoose"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="@dimen/margin_12"
-        android:paddingVertical="@dimen/margin_20"
-        android:gravity="center">
-        <ImageView
-            android:id="@+id/ivNoChooseCheck"
-            android:layout_width="@dimen/margin_24"
-            android:layout_height="@dimen/margin_24"
-            android:src="@drawable/selector_radio_circle" />
+        android:layout_height="40dp"
+        android:paddingHorizontal="14dp" >
+
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_12"
-            android:textColor="@color/color_6D7693"
-            android:textSize="@dimen/textSize14sp"
-            android:text="@string/P276"/>
-    </LinearLayout>
+            android:layout_gravity="left|center_vertical"
+            android:textColor="@color/color_444E57"
+            android:textSize="14sp"
+            android:text="@string/promotion"/>
+
+        <TextView
+            android:id="@+id/tvViewMore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center_vertical"
+            android:textColor="@color/color_025BE8"
+            android:textSize="14sp"
+            android:text="@string/promotion"/>
+
+    </FrameLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/color_e3e8ee"
+        android:layout_marginHorizontal="14dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvFirstDeposit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_12"
+        android:layout_marginVertical="12dp"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="2"
         tools:listitem="@layout/item_dailyconfig"/>
 
 </LinearLayout>
-
 
