--- a/app/src/main/res/layout/online_crypto_pay_fragment.xml
+++ b/app/src/main/res/layout/online_crypto_pay_fragment.xml
@@ -1,208 +1,213 @@
-<?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:overScrollMode="never"
     android:background="@color/color_F0F5FA"
-    tools:context=".ui.money.recharge.OnlineCryptoPayFragment">
+    android:orientation="vertical">
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="14dp">
+
+            <!--协议/币种-->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_currency"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardBackgroundColor="@color/color_191919_FCFCFC"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="0dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="44dp"
+                    android:background="@color/color_191919_FCFCFC"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="12dp"
+                        android:text="@string/title_currency"
+                        android:textColor="@color/color_9BB3D9_535D76"
+                        android:textSize="@dimen/textSize13sp" />
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="20dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:background="@color/color_666666_bcbcbc"
+                        android:visibility="invisible" />
+
+                    <TextView
+                        android:id="@+id/txv_currency"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="9dp"
+                        android:layout_weight="1"
+                        android:background="@null"
+                        android:gravity="center_vertical|left"
+                        android:textColor="@color/color_9BB3D9_535D76"
+                        android:textSize="@dimen/textSize13sp" />
+
+                    <ImageView
+                        android:layout_width="35dp"
+                        android:layout_height="45dp"
+                        android:contentDescription="@null"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/icon_arrow_down" />
+
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+
+            <!--充值账号-->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_account"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:cardBackgroundColor="@color/color_191919_FCFCFC"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="0dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="44dp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="12dp"
+                        android:text="@string/title_recharge_account"
+                        android:textColor="@color/color_9BB3D9_535D76"
+                        android:textSize="@dimen/textSize14sp" />
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="20dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:background="@color/color_666666_bcbcbc"
+                        android:visibility="invisible" />
+
+                    <TextView
+                        android:id="@+id/txv_account"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="9dp"
+                        android:layout_weight="1"
+                        android:background="@null"
+                        android:gravity="center_vertical|left"
+                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textSize="@dimen/textSize14sp" />
+
+                    <ImageView
+                        android:layout_width="35dp"
+                        android:layout_height="45dp"
+                        android:contentDescription="@null"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/icon_arrow_down" />
+
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+
+            <!-- 充值個數 -->
+            <org.cxct.sportlottery.view.LoginEditText
+                android:id="@+id/et_recharge_account"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                app:cvHint="@string/edt_hint_crypto_pay_count"
+                app:cvInputType="number"
+                app:cvTitle="@string/txv_recharge_count" />
+
+            <TextView
+                android:id="@+id/tv_rate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/hint_rate"
+                android:textColor="@color/color_E44438_e44438"
+                android:textSize="@dimen/textSize12sp" />
+
+            <TextView
+                android:id="@+id/tv_recharge_money"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/txv_recharge_money"
+                android:textColor="@color/color_E44438_e44438"
+                android:textSize="@dimen/textSize12sp" />
+
+
+            <TextView
+                android:id="@+id/tv_fee_rate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/hint_fee_rate"
+                android:textColor="@color/color_E44438_e44438"
+                android:textSize="@dimen/textSize12sp" />
+
+
+            <TextView
+                android:id="@+id/tv_fee_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/hint_fee_amount"
+                android:textColor="@color/color_E44438_e44438"
+                android:textSize="@dimen/textSize12sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
+
+                <!-- class內設定字串-->
+                <TextView
+                    android:id="@+id/tv_remark"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_E44438_e44438"
+                    android:textSize="@dimen/textSize12sp" />
+
+                <TextView
+                    android:id="@+id/tv_hint"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/money_recharge_hint1"
+                    android:textColor="@color/color_E44438_e44438"
+                    android:textSize="@dimen/textSize12sp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_F0F5FA"
-        android:clickable="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:orientation="vertical"
-        android:padding="14dp">
-
-
-        <!--协议/币种-->
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv_currency"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/color_191919_FCFCFC"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="0dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="44dp"
-                android:gravity="center"
-                android:background="@color/color_191919_FCFCFC"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:text="@string/title_currency"
-                    android:textColor="@color/color_9BB3D9_535D76"
-                    android:textSize="@dimen/textSize13sp" />
-
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="20dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@color/color_666666_bcbcbc"
-                    android:visibility="invisible" />
-
-                <TextView
-                    android:id="@+id/txv_currency"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="9dp"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:gravity="center_vertical|left"
-                    android:textColor="@color/color_9BB3D9_535D76"
-                    android:textSize="@dimen/textSize13sp" />
-
-                <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="45dp"
-                    android:contentDescription="@null"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/icon_arrow_down" />
-
-            </LinearLayout>
-
-
-        </androidx.cardview.widget.CardView>
-
-        <!--充值账号-->
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cv_account"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            app:cardBackgroundColor="@color/color_191919_FCFCFC"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="0dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="44dp"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:text="@string/title_recharge_account"
-                    android:textColor="@color/color_9BB3D9_535D76"
-                    android:textSize="@dimen/textSize14sp" />
-
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="20dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:visibility="invisible"
-                    android:background="@color/color_666666_bcbcbc" />
-
-                <TextView
-                    android:id="@+id/txv_account"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="9dp"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:gravity="center_vertical|left"
-                    android:textColor="@color/color_BBBBBB_333333"
-                    android:textSize="@dimen/textSize14sp" />
-
-                <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="45dp"
-                    android:contentDescription="@null"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/icon_arrow_down" />
-
-            </LinearLayout>
-
-
-        </androidx.cardview.widget.CardView>
-
-        <!-- 充值個數 -->
-        <org.cxct.sportlottery.view.LoginEditText
-            android:id="@+id/et_recharge_account"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            app:cvHint="@string/edt_hint_crypto_pay_count"
-            app:cvInputType="number"
-            app:cvTitle="@string/txv_recharge_count" />
-
-        <TextView
-            android:id="@+id/tv_rate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/hint_rate"
-            android:textColor="@color/color_E44438_e44438"
-            android:textSize="@dimen/textSize12sp" />
-
-        <TextView
-            android:id="@+id/tv_recharge_money"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/txv_recharge_money"
-            android:textColor="@color/color_E44438_e44438"
-            android:textSize="@dimen/textSize12sp"
-            android:layout_marginTop="10dp"/>
-
-
-        <TextView
-            android:id="@+id/tv_fee_rate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/hint_fee_rate"
-            android:textColor="@color/color_E44438_e44438"
-            android:textSize="@dimen/textSize12sp" />
-
-
-
-        <TextView
-            android:id="@+id/tv_fee_amount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/hint_fee_amount"
-            android:textColor="@color/color_E44438_e44438"
-            android:textSize="@dimen/textSize12sp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
-
-            <!-- class內設定字串-->
-            <TextView
-                android:id="@+id/tv_remark"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/color_E44438_e44438"
-                android:textSize="@dimen/textSize12sp" />
-
-            <TextView
-                android:id="@+id/tv_hint"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/money_recharge_hint1"
-                android:textColor="@color/color_E44438_e44438"
-                android:textSize="@dimen/textSize12sp" />
-
-        </LinearLayout>
-
+        android:background="@color/white"
+        android:orientation="vertical" >
 
         <Button
             android:id="@+id/btn_submit"
@@ -214,25 +219,27 @@
             android:layout_marginEnd="@dimen/margin_20"
             android:background="@drawable/ic_submit"
             android:gravity="center"
-            android:textAllCaps="false"
             android:text="@string/btn_submit"
+            android:textAllCaps="false"
             android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize16sp"
             android:textStyle="bold" />
+
         <include
             android:id="@+id/linMaintenance"
             layout="@layout/view_payment_maintenance"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            tools:visibility="visible"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            tools:visibility="visible" />
+
         <LinearLayout
-            android:layout_marginBottom="@dimen/dp_40"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/margin_20"
+            android:layout_marginBottom="@dimen/dp_40"
             android:orientation="horizontal">
 
             <TextView
@@ -240,7 +247,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/customer_service"
                 android:textColor="@color/color_A5A9B3"
-                android:textSize="@dimen/textSize14sp"/>
+                android:textSize="@dimen/textSize14sp" />
 
             <TextView
                 android:id="@+id/tv_service_online"
@@ -248,9 +255,11 @@
                 android:layout_height="wrap_content"
                 android:text="@string/btn_service"
                 android:textColor="@color/color_025BE8"
-                android:textSize="@dimen/textSize14sp"/>
+                android:textSize="@dimen/textSize14sp" />
 
         </LinearLayout>
+
     </LinearLayout>
 
-</ScrollView>
+
+</LinearLayout>
