--- a/app/src/main/res/layout/crypto_pay_fragment.xml
+++ b/app/src/main/res/layout/crypto_pay_fragment.xml
@@ -539,6 +539,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="20dp"
                 android:visibility="gone"
                 app:cardBackgroundColor="@color/color_191919_FCFCFC"
                 app:cardCornerRadius="5dp"
@@ -658,7 +659,7 @@
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:layout_marginHorizontal="@dimen/margin_20"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/ic_submit"
             android:gravity="center"
             android:text="@string/submit"
