--- a/app/src/main/res/layout/transfer_pay_fragment.xml
+++ b/app/src/main/res/layout/transfer_pay_fragment.xml
@@ -812,7 +812,7 @@
             android:id="@+id/linReceiveExtra"
             android:layout_width="match_parent"
             android:layout_height="@dimen/margin_30"
-            android:layout_marginBottom="@dimen/margin_5"
+            android:layout_marginTop="10dp"
             android:background="@drawable/bg_gradient_red_orange"
             android:gravity="center"
             android:visibility="gone"
@@ -841,6 +841,7 @@
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="44dp"
+            android:layout_marginTop="10dp"
             android:layout_marginStart="@dimen/margin_20"
             android:layout_marginEnd="@dimen/margin_20"
             android:background="@drawable/ic_submit"
