--- a/app/src/main/res/layout/dialog_age_verify.xml
+++ b/app/src/main/res/layout/dialog_age_verify.xml
@@ -43,6 +43,7 @@
             android:paddingHorizontal="18dp">
 
             <LinearLayout
+                android:id="@+id/lin1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
@@ -68,6 +69,7 @@
 
 
             <LinearLayout
+                android:id="@+id/lin2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
@@ -92,6 +94,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/lin3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
@@ -116,6 +119,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/lin4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
